src/css/index.css
/*Generic styles*/

p {
  position: relative;
  bottom: 45px;
  padding: 15px;
}

a {
  color: #6767ff;
  width: 0px;
}

body {
  width: 100%;
  height: 100vh;
  background-color: #051726;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  bottom: 180px;
  /* align-items: center; */
}

.overflow {
  overflow-x: hidden;
}

h1 {
  text-align: center;
  display: block;
  margin: 0;
  padding: 10;
}

.pay-break {
  text-align: center;
  padding: 10px;
}

.header-pay {
  align-self: center;
}

.flex {
  display: flex;
  flex-direction: column;
}
/*Image styles for logo*/

/* img {
  width: 43%;
  min-width: 500px;
  text-align: center;
  margin: 0;
  padding: 0px;
  position: absolute;
  position: relative;
  top: -50px; */
/* } */

.qp-logo {
  width: 402px;
  min-width: 402px;
  padding: 381px;
  align-self: center;
  height: auto;
  margin: 0;
  justify-content: center;
}

#original-logo {
  margin: 0;
  padding: 0;
  height: 600px;
  display: flex;
}

/* #graph-logo {
  width: 100%;
  min-width: 500px;
  height: auto;
  text-align: center;
  position: absolute;
  position: relative;
  bottom: 50px;
} */
/*Form styles*/

/* #success-form {
  width: 22%;
  min-width: 200px;
  margin: 0 auto;
  background-color: #fcfcfc;
  padding: 20px 50px 40px;
  box-shadow: 1px 1px 4px 1px #aaa;
  font-family: sans-serif;
  position: relative;
  top: -290px;
  border: solid 2px #81ffd9;
  height: 620px;
  margin-top: -1px;
} */

/* #success-form * {
  box-sizing: border-box;
} */

#pay-form {
  width: 16%;
  min-width: 200px;
  margin: 0 auto;
  background-color: #fcfcfc;
  padding: 20px 50px 40px;
  box-shadow: 1px 1px 4px 1px #aaa;
  font-family: sans-serif;
  /* position: relative;
  top: -240px; */
  border: solid 2px #6edab9;
  /* margin-top: -15px; */
  border-radius: 21px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#info-card {
  width: 16%;
  min-width: 200px;
  height: 185px;
  margin: 0 auto;
  background-color: rgba(0, 0, 0, 0.3);
  padding: 20px 50px 40px;
  font-family: sans-serif;
  /* position: relative;
  top: -240px; */
  border: solid 2px #6edab9;
  margin-top: -15px;
  margin-bottom: 22px;
  border-radius: 35px;
  align-items: center;
}

.info-type {
  position: relative;
  bottom: 25px;
  height: 200px;

  color: white;
}

.pay-type {
  /* justify-content: center;
  text-align: center;
  display: flex; */
  align-self: center;
}

.header-info {
  /* padding: 25px; */
  align-self: center;
  text-align: center;
  font-size: 22px;
}

.header-para {
  align-self: center;
  text-align: center;
  font-size: 14px;
}

#pay-form * {
  box-sizing: border-box;
}

#pay-form h2 {
  text-align: center;
  /* margin-bottom: 30px; */
}

#pay-form input {
  margin-bottom: 15px;
}

#pay-form input[type='text'] {
  display: block;
  height: 32px;
  padding: 6px 16px;
  width: 100%;
  border: none;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f3f3f3;
}

/*Class to move logo around within a div*/

/* .logo {
  width: 100%;
  height: auto;
} */
/*Div that holds both graph and regular logo*/

/* .section-div {
  position: absolute;
  position: relative;
  bottom: 40px;
} */

/*styles for heading results*/

/* #results-printed {
  padding: 25px;
  font-size: 50px;
  text-align: center;
} */

/* button styles */

#calButton {
  background: rgb(54, 156, 28);
  display: inline-block;
  outline: none;
  cursor: pointer;
  font-size: 14px;
  line-height: 1;
  border-radius: 500px;
  border: 1px solid transparent;
  letter-spacing: 2px;
  min-width: 160px;
  text-transform: uppercase;
  white-space: normal;
  font-weight: 700;
  text-align: center;
  padding: 17px 48px;
  color: #81ffd9;
  background-color: black;
  height: 48px;
  /* position: absolute;
  position: relative;
  top: -20px; */
  margin: 10px;
  /*right: 10px; */
  /* justify-content: center; */
  margin-left: -15px;
}
/* #reset-button {
  border: none;
  display: inline-block;
  outline: none;
  cursor: pointer;
  font-size: 14px;
  line-height: 1;
  border-radius: 500px;
  border: 1px solid transparent;
  letter-spacing: 2px;
  min-width: 160px;
  text-transform: uppercase;
  white-space: normal;
  font-weight: 700;
  text-align: center;
  padding: 17px 48px;
  color: #81ffd9;
  background-color: black;
  height: 48px;
  margin-top: 20px;
  position: relative;
  left: 65px;
  text-align: center;
  position: relative;
  left: 7px;
} */

.header-text {
  font-weight: bold;
  padding: 10px;
}

.display-none {
  display: none;
}

#myChart {
  margin-top: -28px;
}

/*Media Queries*/

@media only screen and (min-width: 375px) {
  .header-info {
    font-size: 22px;
  }

  .header-para {
    font-size: 14px;
  }

  .qp-logo {
    width: 476px;
    min-width: 476px;
    padding: 353px;
  }
  .overflow {
    overflow-x: hidden;
  }
}

/* Tablets */

@media only screen and (min-width: 540px) {
  .header-info {
    font-size: 22px;
  }

  .header-para {
    font-size: 14px;
  }

  .info-type {
    position: relative;
    bottom: 20px;
    height: 200px;
    color: white;
  }
}

/* Large screens */
@media only screen and (min-width: 960px) {
  p {
    position: relative;
    bottom: 45px;
    padding: 15px;
  }

  a {
    color: #6767ff;
    width: 0px;
  }

  body {
    width: 100%;
    height: 100vh;
    background-color: #051726;
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    bottom: 180px;
    /* align-items: center; */
  }

  .overflow {
    overflow-x: hidden;
  }

  h1 {
    text-align: center;
    display: block;
    margin: 0;
    padding: 10;
  }

  .pay-break {
    text-align: center;
    padding: 10px;
  }

  .header-pay {
    align-self: center;
  }

  .flex {
    display: flex;
    flex-direction: column;
  }

  .qp-logo {
    width: 1250px;
    min-width: 500px;
    align-self: center;
    height: auto;
    margin: 0;
    padding: 0;
    justify-content: center;
  }

  #original-logo {
    margin: 0;
    padding: 0;
    height: 600px;
    display: flex;
  }

  #pay-form {
    width: 16%;
    min-width: 200px;
    margin: 0 auto;
    background-color: #fcfcfc;
    padding: 20px 50px 40px;
    box-shadow: 1px 1px 4px 1px #aaa;
    font-family: sans-serif;
    /* position: relative;
    top: -240px; */
    border: solid 2px #6edab9;
    /* margin-top: -15px; */
    border-radius: 21px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  #info-card {
    width: 16%;
    min-width: 200px;
    height: 185px;
    margin: 0 auto;
    background-color: rgba(0, 0, 0, 0.3);
    padding: 20px 50px 40px;
    font-family: sans-serif;
    /* position: relative;
    top: -240px; */
    border: solid 2px #6edab9;
    margin-top: -15px;
    margin-bottom: 22px;
    border-radius: 35px;
    align-items: center;
  }

  .info-type {
    position: relative;
    bottom: 20px;
    height: 200px;
    color: white;
  }

  .pay-type {
    /* justify-content: center;
    text-align: center;
    display: flex; */
    align-self: center;
  }

  .header-info {
    /* padding: 25px; */
    align-self: center;
    text-align: center;
    font-size: 22px;
  }

  .header-para {
    font-size: 14px;
    align-self: center;
    text-align: center;
  }

  #pay-form * {
    box-sizing: border-box;
  }

  #pay-form h2 {
    text-align: center;
    /* margin-bottom: 30px; */
  }

  #pay-form input {
    margin-bottom: 15px;
  }

  #pay-form input[type='text'] {
    display: block;
    height: 32px;
    padding: 6px 16px;
    width: 100%;
    border: none;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #f3f3f3;
  }

  #calButton {
    background: rgb(54, 156, 28);
    display: inline-block;
    outline: none;
    cursor: pointer;
    font-size: 14px;
    line-height: 1;
    border-radius: 500px;
    border: 1px solid transparent;
    letter-spacing: 2px;
    min-width: 160px;
    text-transform: uppercase;
    white-space: normal;
    font-weight: 700;
    text-align: center;
    padding: 17px 48px;
    color: #81ffd9;
    background-color: black;
    height: 48px;
    /* position: absolute;
    position: relative;
    top: -20px; */
    margin: 10px;
    /*right: 10px; */
    /* justify-content: center; */
    margin-left: -15px;
  }
  .header-text {
    font-weight: bold;
    padding: 10px;
  }

  .display-none {
    display: none;
  }

  #myChart {
    margin-top: -28px;
  }

  @media only screen and (min-width: 1562px) {
    .header-para {
      font-size: 16px;
    }

    .info-type {
      position: relative;
      bottom: 10px;
      align-items: center;
    }
  }
}

